fix alignment of nav

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,7 @@
     width: 100vw;
     background-color: rgb(235, 235, 235);
   }
+
+  nav{
+    border-bottom: 2px black solid;
+}
